[package]
name = "softfloat_bench"
version = "0.1.0"
authors = ["dalance@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-soft-float = "0.1.0"
softfloat-sys = "0.1.2"
rug = "1.10.0"
half = "1.6.0"
rustc_apfloat = "0.1.3"
